--- a/TransactionUploader/TransactionUploader.Services/TransactionUploader.Services.csproj
+++ b/TransactionUploader/TransactionUploader.Services/TransactionUploader.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TransactionUploader.Common\TransactionUploader.Common.csproj" />
     <ProjectReference Include="..\TransactionUploader.Repository\TransactionUploader.Repository.csproj" />
   </ItemGroup>
