--- a/TransactionUploader/TransactionUploader.WebApp/TransactionUploader.WebApp.csproj
+++ b/TransactionUploader/TransactionUploader.WebApp/TransactionUploader.WebApp.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TransactionUploader.Repository.EF\TransactionUploader.Repository.EF.csproj" />
     <ProjectReference Include="..\TransactionUploader.Services\TransactionUploader.Services.csproj" />
   </ItemGroup>
 
