--- a/TransactionUploader/TransactionUploader.WebApp/appsettings.Development.json
+++ b/TransactionUploader/TransactionUploader.WebApp/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "TransactionDatabase": "Server=.\\SQLExpress;Database=test_db;Trusted_Connection=True;"
   }
 }
